textInput wasn't using available space on firefox, added styling to fix it for firefox

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -195,6 +195,7 @@
 
 .todo-input {
     width: fill;
+    width: -moz-available;
 }
 
 .todo-input-new {
